# TiltStack

./: .gitignore  Makefile  PYBIND11_README.md  QUICK_START.md  README.md  br_results.txt  debug_bots.py  demo_live.py  diagnose_cfr.py  environment.yml  evaluate.py  generate_graphs.py  leduc_results.txt  leduc_strategy.csv  pyproject.toml  requirements.txt  setup.py  test_cfr_agent.py  test_exploitative.py  train_cfr_leduc_100k.py
demos/kuhn/: Kuhn.py
demos/leduc/: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md  requirements.txt  setup.py
demos/leduc/docs/: IMPLEMENTATION.md  PERFORMANCE.md
demos/leduc/src/cppsrc/: BestResponse.cpp  BestResponse.h  Leduc.cpp  Leduc.h  Node.cpp  Node.h  bindings.cpp
demos/leduc/src/pysrc/: Leduc.py  app.py  demo_vs_tight.py
demos/leduc/src/showcase/: app.py  classifier.py  demo_vs_tight.py  evaluate.py  exploitative_agent.py  gto_agent.py  opponents.py
demos/leduc/src/tests/: test_cfr.py  test_rlcard.py  train_cfr_leduc.py
demos/leduc/tests/: test_cfr_100k.py  train_cfr_leduc.py
docs/: CLUSTERING.md  COROUTINES.md  DEEPCFR.md  EVALUATION.md  LEDUC.md  LEDUC_IMPLEMENTATION.md  NETWORK_ARCH.md  SETUP.md  tasks.md
models/: leduc_cfr_100k.pkl  leduc_cfr_10k.pkl
src/: CLUSTERING.md  CMakeLists.txt  Makefile  exploitative_agent.py  gpu_monitor.py  gto_agent.py  opponents.py  setup.py  setup_deepcfr.py  stat_tracker.py
src/cppsrc/: BestResponse.h  CFRGame.cpp  CFRGame.h  CFRTypes.h  CFRUtils.h  Coroutine.h  DeepCFR.cpp  DeepCFR.h  InferenceQueue.h  Leduc.cpp  Leduc.h  Node.cpp  Node.h  Orchestrator.cpp  Orchestrator.h  Scheduler.cpp  Scheduler.h  bindings.cpp  bindings_deepcfr.cpp  example.cpp  flop_expander.cpp  flop_expander.h  river_expander.cpp  river_expander.h  turn_expander.cpp  turn_expander.h
src/cppsrc/clustering/: flop_expander.cpp  flop_expander.h  river_expander.h  turn_expander.h
src/cppsrc/deepcfr/: CFRGame.cpp  CFRGame.h  CFRTypes.h  CFRUtils.h  Coroutine.h  DeepCFR.cpp  DeepCFR.h  GRPO.cpp  GRPO.h  InferenceQueue.h  Match.cpp  Match.h  Orchestrator.cpp  Orchestrator.h  Reservoir.cpp  Reservoir.h  Scheduler.cpp  Scheduler.h  TPO.cpp  TPO.h  bindings_deepcfr.cpp
src/cppsrc/test/: test_cfrgame.cpp  test_deepcfr.cpp  test_rng.cpp  test_scheduler.cpp
src/pysrc/: BestResponse.py  Kuhn.py  Leduc.py  NLHE_BestResponse.py  NLHE_Trainer.py  Node.py  cluster_pipeline.py  flop_cluster_pipeline.py  flop_clusterer.py  flop_visualize_labels.py  generate_sample_indices.py  leduc_results_old.txt  network_training.py  pipe_to_npy.py  preflop_ehs_pipeline.py  preflop_ehs_visualize.py  river_cluster_pipeline.py  river_clusterer.py  river_visualize_labels.py  test_example.py  turn_cluster_pipeline.py  turn_clusterer.py  turn_visualize_labels.py  visualize_labels.py
src/pysrc/clustering/: clusterer_lib.py  flop_cluster_pipeline.py  flop_clusterer.py  flop_visualize_labels.py  preflop_ehs_pipeline.py  preflop_ehs_visualize.py  river_cluster_pipeline.py  river_clusterer.py  river_visualize_labels.py  turn_cluster_pipeline.py  turn_clusterer.py  turn_visualize_labels.py
src/pysrc/deepcfr/: NLHE_BestResponse.py  NLHE_GRPO.py  NLHE_TPO.py  NLHE_Trainer.py  network_training.py  rollout.py  tb_launch.py  train_loops.py  training_control.py
src/pysrc/evaluation/: match_runner.py  net_tester.py  poker_live.py  preflop_query.py  tilt_agents.py
